# ai-agent-history-rag-mcp

./: .dockerignore  .env.docker.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: api-knowledge.md  status-endpoint-design.md
scripts/: ai-agent-history-rag.service  check_lancedb_methods.py  check_lancedb_opt.py  check_lancedb_opt_sig.py  check_lancedb_sig.py  cleanup.sh  com.ai-agent-history-rag.daemon.plist  com.ai-agent-history-rag.daemon.plist.template  force_optimize.py  install-launchd.sh  install-systemd.sh  install-windows.ps1  start.sh  status.sh  stop.sh
src/claude_history_rag/: __init__.py  __main__.py  api_client.py  auth.py  chunker.py  client_registry.py  client_state.py  config.py  daemon.py  docker_wizard.py  doctor.py  embedder.py  errors.py  gcp_auth.py  installer.py  models.py  parser.py  server.py  settings_wizard.py  status.py  status_server.py  store.py  time_filters.py  uninstaller.py  watcher.py
src/claude_history_rag/antigravity/: chunker.py  watcher.py
src/claude_history_rag/chatgpt/: __init__.py  chunker.py  watcher.py
src/claude_history_rag/claude_app/: __init__.py  chunker.py  watcher.py
src/claude_history_rag/codex/: __init__.py  chunker.py  parser.py  watcher.py
src/claude_history_rag/decision_engine/: __init__.py  cache.py  config.py  engine.py  evaluator.py  models.py  query_analyzer.py  synthesizer.py  technology_patterns.py
src/claude_history_rag/gemini/: __init__.py  chunker.py  parser.py  watcher.py
src/claude_history_rag/storage/: protocol.py  qdrant.py  sqlite.py
src/claude_history_rag/templates/: dashboard.html
tests/: conftest.py  manual_backend_test.py  repro_sqlite_transaction.py  test_auth.py  test_chunker.py  test_daemon_supervision.py  test_embedder_providers.py  test_installer_mcp_config.py  test_parser.py  test_spanner_status_paths.py  test_store_interface.py  test_time_filters.py
tests/fixtures/: sample_session.jsonl  sample_session_compact.jsonl
tests/test_decision_engine/: __init__.py  test_cache.py  test_engine.py  test_evaluator.py  test_query_analyzer.py  test_synthesizer.py
