[project]
name = "claude-history-rag"
version = "0.1.0"
description = "MCP server providing RAG over Claude Code conversation history"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Brandon Meyer" }
]
keywords = ["mcp", "claude", "rag", "vector-search", "conversation-history"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Core dependencies (minimal for client mode)
dependencies = [
    "mcp[cli]>=1.24.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "httpx>=0.27.0",
    "watchfiles>=1.1.1",
]

[project.optional-dependencies]
# Server mode - runs the central server with embeddings + storage
server = [
    "lancedb>=0.25.3",
    "aiohttp>=3.9.0",
    "google-cloud-spanner>=3.57.0",
    "psutil>=5.9.0",
    "tantivy>=0.22.0",
    "pylance>=1.0.0",
]
# Client mode currently imports shared status/store modules at startup, so keep
# this extra honest until those modules are split/lazy-loaded.
client = [
    "lancedb>=0.25.3",
    "aiohttp>=3.9.0",
    "google-cloud-spanner>=3.57.0",
    "psutil>=5.9.0",
    "tantivy>=0.22.0",
    "pylance>=1.0.0",
]
# Full install - everything for local standalone mode
all = [
    "lancedb>=0.25.3",
    "aiohttp>=3.9.0",
    "google-cloud-spanner>=3.57.0",
    "psutil>=5.9.0",
    "tantivy>=0.22.0",
    "pylance>=1.0.0",
]
# Development dependencies
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
    "lancedb>=0.25.3",
    "aiohttp>=3.9.0",
    "google-cloud-spanner>=3.57.0",
    "psutil>=5.9.0",
    "tantivy>=0.22.0",
    "pylance>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/bmeyer99/claude-history-rag-mcp"
Repository = "https://github.com/bmeyer99/claude-history-rag-mcp"
Issues = "https://github.com/bmeyer99/claude-history-rag-mcp/issues"

[project.scripts]
ai-agent-history-rag = "claude_history_rag.__main__:main"
ai-agent-history-rag-daemon = "claude_history_rag.daemon:main"
ai-agent-history-rag-install = "claude_history_rag.installer:main"
ai-agent-history-rag-doctor = "claude_history_rag.doctor:main"
ai-agent-history-rag-settings = "claude_history_rag.settings_wizard:main"
ai-agent-history-rag-uninstall = "claude_history_rag.uninstaller:main"
ai-agent-history-rag-docker = "claude_history_rag.docker_wizard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_history_rag"]

[tool.hatch.build.targets.sdist]
include = ["src/claude_history_rag", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
    "lancedb>=0.25.3",
    "aiohttp>=3.9.0",
    "google-cloud-spanner>=3.57.0",
    "psutil>=5.9.0",
    "tantivy>=0.22.0",
    "pylance>=1.0.0",
]
